<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>pl.rafalmag</groupId>
    <artifactId>ev3-tracked-loader</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <brick.host>192.168.1.8</brick.host>
        <brick.home>/home/lejos/programs</brick.home>
        <brick.user>root</brick.user>
    </properties>
    <dependencies>
        <!--
        mvn install:install-file -Dfile=ev3classes.jar -DgroupId=lejos -DartifactId=ev3classes -Dversion=0.8.1 -Dpackaging=jar
        -->
        <dependency>
            <groupId>com.github.bdeneuter</groupId>
            <artifactId>lejos-ev3-api</artifactId>
            <version>0.9.1-beta</version>
            <scope>provided</scope>
        </dependency>
        <!--
        mvn install:install-file -Dfile=dbusjava.jar -DgroupId=lejos -DartifactId=dbus -Dversion=0.8.1 -Dpackaging=jar
         -->
        <dependency>
            <groupId>com.github.bdeneuter</groupId>
            <artifactId>dbus-java</artifactId>
            <version>2.7</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy</artifactId>
            <version>3.0.23</version>
        </dependency>


        <!--<dependency>-->
            <!--<groupId>commons-net</groupId>-->
            <!--<artifactId>commons-net</artifactId>-->
            <!--<version>3.3</version>-->
        <!--</dependency>-->
         <dependency>
           <groupId>ch.qos.logback</groupId>
           <artifactId>logback-classic</artifactId>
           <version>[1.3.12,)</version>
         </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>[32.0.0-android,)</version>
        </dependency>

        <!-- tests only -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>[4.13.1,)</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>1.5.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.9.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>pl.pragmatists</groupId>
            <artifactId>JUnitParams</artifactId>
            <version>1.0.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Mandatory dependencies for using Spock -->
        <dependency>
            <groupId>org.spockframework</groupId>
            <artifactId>spock-core</artifactId>
            <version>2.3-groovy-3.0</version>
            <scope>test</scope>
        </dependency>
        <!-- Optional dependencies for using Spock -->
        <dependency> <!-- enables mocking of classes (in addition to interfaces) -->
            <groupId>cglib</groupId>
            <artifactId>cglib-nodep</artifactId>
            <version>3.3.0</version>
            <scope>test</scope>
        </dependency>
<!--        <dependency> &lt;!&ndash; enables mocking of classes (in addition to interfaces) &ndash;&gt;-->
<!--            <groupId>net.bytebuddy</groupId>-->
<!--            <artifactId>byte-buddy</artifactId>-->
<!--            <version>1.6.5</version>-->
<!--            <scope>test</scope>-->
<!--        </dependency>-->
        <dependency> <!-- enables mocking of classes without default constructor (together with CGLIB) -->
            <groupId>org.objenesis</groupId>
            <artifactId>objenesis</artifactId>
            <version>2.5.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.gmavenplus</groupId>
                <artifactId>gmavenplus-plugin</artifactId>
                <version>4.1.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>addSources</goal>
                            <goal>addTestSources</goal>
                            <goal>generateStubs</goal>
                            <goal>compile</goal>
                            <goal>generateTestStubs</goal>
                            <goal>compileTests</goal>
                            <goal>removeStubs</goal>
                            <goal>removeTestStubs</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- to point our java 7 compatibility -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <!-- build a runnable jar with dependencies -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>pl.rafalmag.ev3.trackedloader.Main</mainClass>
                        </manifest>
                        <manifestEntries>
                            <!-- if ev3classes scope is "provided" -> make sure this point to existing files-->
                            <Class-Path>/home/root/lejos/lib/ev3classes.jar
                                /home/root/lejos/lib/dbusjava.jar
                                /home/root/lejos/libjna/usr/share/java/jna.jar
                            </Class-Path>
                        </manifestEntries>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <finalName>${project.artifactId}</finalName>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- deploy jar with dependencies on EV3 -->
            <plugin>
                <inherited>false</inherited>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <phase>install</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <echo
                                        message="Push to server ${project.build.directory}/${project.artifactId}.jar">
                                </echo>
                                <scp trust="yes" username="${brick.user}" password=""
                                     todir="${brick.user}@${brick.host}:${brick.home}">
                                    <fileset dir="${project.build.directory}">
                                        <include name="${project.artifactId}.jar"/>
                                    </fileset>
                                </scp>
                            </target>
                        </configuration>
                    </execution>
                </executions>
                <dependencies>
                    <!-- ANT dependencies for this plugin - mainly to be able to use SCP -->
                    <dependency>
                        <groupId>commons-net</groupId>
                        <artifactId>commons-net</artifactId>
                        <version>3.9.0</version>
                    </dependency>
                    <dependency>
                        <groupId>ant</groupId>
                        <artifactId>ant-commons-net</artifactId>
                        <version>1.6.5</version>
                    </dependency>
                    <dependency>
                        <groupId>ant</groupId>
                        <artifactId>ant-jsch</artifactId>
                        <version>1.6.5</version>
                    </dependency>
                    <dependency>
                        <groupId>jsch</groupId>
                        <artifactId>jsch</artifactId>
                        <version>0.1.29</version>
                    </dependency>
                    <dependency>
                        <groupId>ant-contrib</groupId>
                        <artifactId>ant-contrib</artifactId>
                        <version>20020829</version>
                    </dependency>
                </dependencies>
            </plugin>
            <!-- declared to ensure compatibility with test run on JDK 17+ -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
